--- a/src/app.html
+++ b/src/app.html
@@ -165,7 +165,11 @@
 
       </main>
 
-      <sidebar :toggle="toggleSidebar" v-if="showSidebar"/>
+      <sidebar
+        v-if="showSidebar"
+        :toggle="toggleSidebar"
+        :cart="cart"
+        />
 
       <footer>
       </footer>
@@ -210,7 +214,12 @@
       })
 
       app.component('sidebar', {
-        props: ['toggle'],
+        props: ['toggle', 'cart'],
+        computed: {
+          cartTotal() {
+            return (this.cart.carrots * 4.82).toFixed(2)
+          }
+        },
         template:`
           <aside class="cart-container">
             <div class="cart">
@@ -238,9 +247,9 @@
                     <tr>
                       <td><i class="icofont-carrot icofont-3x"></i></td>
                       <td>Carrot</td>
-                      <td>$1.00</td>
-                      <td class="center">1</td>
-                      <td>$1.00</td>
+                      <td>$4.82</td>
+                      <td class="center">{{ cart.carrots }}</td>
+                      <td>$ {{ 4.82 * cart.carrots }}</td>
                       <td class="center">
                         <button class="btn btn-light cart-remove">
                           &times;
@@ -252,7 +261,7 @@
 
                 <p class="center"><em>No items in cart</em></p>
                 <div class="spread">
-                  <span><strong>Total:</strong> $1.00</span>
+                  <span><strong>Total:</strong> $ {{ cartTotal }}</span>
                   <button class="btn btn-light">Checkout</button>
                 </div>
               </div>
