--- a/src/app.html
+++ b/src/app.html
@@ -185,11 +185,7 @@
           return {
             showSidebar: false,
             // المخزون
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            },
+            inventory: [],
             // عربة التسوق
             cart: {
               carrots: 0,
@@ -210,7 +206,14 @@
           toggleSidebar() {
             this.showSidebar = !this.showSidebar;
           }
-        }
+        },
+
+        // mounted() {}
+        async mounted() {
+          const res = await fetch('./food.json');
+          const data = await res.json();
+          this.inventory = data;
+        },
       })
 
       app.component('sidebar', {
