--- a/src/app.html
+++ b/src/app.html
@@ -41,19 +41,19 @@
 
         <div class="recommended">
 
-          <div class="card">
+          <div v-for="(product, i) in inventory.slice(0,3)" :key="product.id" class="card">
             <div class="card-title">
-              Carrots
+              {{ product.name }}
             </div>
             <div class="card-body">
-              <i class="icofont-10x icofont-carrot"></i>
+              <i class="icofont-10x icofont-{{ product.icon }}"></i>
               <form>
                 <div class="row">
                   <div class="cell">
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{ product.type }}</em>
                   </div>
                 </div>
                 <div class="row">
@@ -61,7 +61,7 @@
                     <label>Price:</label>
                   </div>
                   <div class="cell">
-                    $4.82
+                    $ {{ product.price.USD }}
                   </div>
                 </div>
                 <div class="row">
@@ -70,94 +70,16 @@
                   </div>
                   <div class="cell">
                     <!-- v-model.number="inventory.carrots" -->
-                    <input type="number" v-model.number="inventory.carrots">
+                    <input type="number" v-model.number="product.quantity">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
               <!-- @click="addToCart('carrots')" -->
-              <button @click="addToCart('carrots')" class="btn btn-light">
+              <button @click="addToCart(product.name, i)" class="btn btn-light">
                 Add to cart
               </button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">
-              Pineapples
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-pineapple"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.62
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <!-- v-model="inventory.pineapples" -->
-                    <input type="number" v-model="inventory.pineapples">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">
-              Cherries
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-cherry"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.04
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <!-- v-model="inventory.cherries" -->
-                    <input type="number" v-model="inventory.cherries">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
             </div>
           </div>
 
@@ -169,6 +91,7 @@
         v-if="showSidebar"
         :toggle="toggleSidebar"
         :cart="cart"
+        :inventory="inventory"
         />
 
       <footer>
@@ -187,20 +110,18 @@
             // المخزون
             inventory: [],
             // عربة التسوق
-            cart: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            }
+            cart: {}
           }
         },
         // methods
         methods: {
           // أضف العدد من النوع الموجود في المخزون إلى الموجود في السلة
           // اعرض الأعداد الموجودة في السلة
-          addToCart(type) {
-            this.cart[type] += this.inventory[type]
-            console.log(this.cart)
+          addToCart(name, index) {
+            console.log(name, index);
+            if (!this.cart[name]) this.cart[name] = 0;
+            this.cart[name] += this.inventory[index].quantity;
+            console.log(this.cart);
           },
           //
           toggleSidebar() {
@@ -217,10 +138,24 @@
       })
 
       app.component('sidebar', {
-        props: ['toggle', 'cart'],
+        props: ['toggle', 'cart', 'inventory'],
         computed: {
-          cartTotal() {
-            return (this.cart.carrots * 4.82).toFixed(2)
+
+        },
+
+        methods: {
+          getPrice(name) {
+            const product = this.inventory.find((p) => {
+              return p.name === name;
+            })
+            return product.price.USD;
+          },
+          calculateTotal() {
+            // return (this.cart.carrots * 4.82).toFixed(2)
+            const total = Object.entries(this.cart).reduce((acc, curr, index) => {
+              return acc + (curr[1] * this.getPrice(curr[0]))
+            }, 0)
+            return total.toFixed(2)
           }
         },
         template:`
@@ -247,12 +182,12 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr v-for="(quantity, key, i) in cart" :key="i">
                       <td><i class="icofont-carrot icofont-3x"></i></td>
-                      <td>Carrot</td>
-                      <td>$4.82</td>
-                      <td class="center">{{ cart.carrots }}</td>
-                      <td>$ {{ 4.82 * cart.carrots }}</td>
+                      <td>{{ key }}</td>
+                      <td>$ {{ getPrice(key) }}</td>
+                      <td class="center">{{ quantity }}</td>
+                      <td>$ {{ getPrice(key) * quantity }}</td>
                       <td class="center">
                         <button class="btn btn-light cart-remove">
                           &times;
@@ -262,9 +197,9 @@
                   </tbody>
                 </table>
 
-                <p class="center"><em>No items in cart</em></p>
+                <p class="center" v-if="!Object.keys(cart).length"><em>No items in cart</em></p>
                 <div class="spread">
-                  <span><strong>Total:</strong> $ {{ cartTotal }}</span>
+                  <span><strong>Total:</strong> $ {{ calculateTotal() }}</span>
                   <button class="btn btn-light">Checkout</button>
                 </div>
               </div>
